[project]
name = "-real-esrgan"
version = "0.1.0"
description = "Realistic Enhanced Super Resolution Generative Adversarial Network trained on the DF2K_OST dataset using PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "safetensors>=0.6.2",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.8.2",
    "torchvision>=0.24.1",
]
